Added java arguments to Eternal